--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -3,7 +3,7 @@ html {
   height: 100%;
 }
 body {
-  max-width: 960px;
+  max-width: 1024px;
 	height: 100%;
 	margin: 0px;
 	background-color: #e2e3e4;
@@ -11,6 +11,7 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+
 a {
 	color: inherit;
 	text-decoration: none;
@@ -28,22 +29,16 @@ nav {
 */
 	color: #2F2F2F;
   display: inline-block;
-  min-height: 90%;
+  height: 90%;
   vertical-align: top;
 	background-color: #F3F3F5;
   border: solid #AAABAD 1px;
   float: left;
+  overflow: auto;
 }
 /*
 //header
 */
-body > header > * {
-  display: inline-block;
-  vertical-align: middle;
-  float: left;
-  font-size: 20px;
-}
-
 body > header > .title {
   max-width: 80%;
   text-align: start;
@@ -78,7 +73,7 @@ body > header {
 }
 /*FIXME 100%*/
 #data {
-  height: 90%;
+  height: 100%;
 }
 #data > header {
   height: 50px;
@@ -130,19 +125,6 @@ body > header {
   width: 100%;
   height: 100%;
 }
-button.upload {
-  width: 14%;
-  margin-right: 5px;
-  background: -moz-linear-gradient(top, #65b98b, #24794b);
-  background: -webkit-linear-gradient(top, #65b98b, #24794b);
-  color: white;
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  border: none;
-  height: 25px;
-  box-shadow: 0 0 0.5em black;
-  font-size: 18px;
-}
 #welcome {
   height: 90%;
   background-color: white;
@@ -153,15 +135,18 @@ button.upload {
 	background-color: white;
 	color: black;
   /* 704 -1px border*/
-  max-width: 703px;
+/*
+  FIXME 770!
+*/
+  width: 760px;
   display: inline-block;
-  min-height: 90%;
+  height: 90%;
   vertical-align: top;
   border-top: solid #AAABAD 1px;
   border-right: solid #AAABAD 1px;
   border-bottom: solid #AAABAD 1px;
   float: left;
-  overflow: hidden;
+  overflow: auto;
 }
 
 /* WORKAROUND */
@@ -185,4 +170,41 @@ button.upload {
 	cursor: default !important;
 	max-width: 80%;
 	max-height: 80%;
+}
+
+@media all and (orientation: portrait) {
+  nav {
+    display: none;
+  }
+  #deck, #data, body{
+    width: 100% !important;
+  }
+}
+
+#upload-button, #logout-button, #account-text {
+  display: none;
+}
+
+
+/*
+ * Uploader
+ */
+#file-picker {
+  visibility: hidden;
+  height: 0;
+  width: 0;
+}
+#upload-button {
+  vertical-align: middle;
+  width: 14%;
+  margin-right: 5px;
+  background: -moz-linear-gradient(top, #65b98b, #24794b);
+  background: -webkit-linear-gradient(top, #65b98b, #24794b);
+  color: white;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border: none;
+  height: 25px;
+  box-shadow: 0 0 0.5em black;
+  font-size: 18px;
 }
