many changes/bugfixes

--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -150,6 +150,15 @@ span#preview {
 }
 
 /*
+ * Folder adder
+ */
+#folder-adder input {
+  border: none;
+  background: none;
+  font-size: inherit;
+}
+
+/*
  * Folders
  */
 .thumbnail.folder {
