--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -60,6 +60,18 @@ header {
 
 
 /*
+ * Dock
+ */
+#dock ul {
+  list-style: none;
+}
+#dock li {
+  display: inline-block;
+}
+#trash.dragenter {
+  font-weight: bold;
+}
+/*
  *section
  */
 section {
@@ -71,8 +83,6 @@ section {
   -moz-box-flex: 1;
   -webkit-box-flex: 1;
 }
-
-
 /*
  * viewer
  */
@@ -108,15 +118,15 @@ section {
 #preview span {
   color: white;
 }
-#preview iframe,
-#preview img,
-#preview audio,
-#preview video {
+#preview iframe {
+  border: none;
+}
+#preview img {
   max-width: 100%;
   max-height: 100%;
-  border: none;
-  display: -webkit-box;
-  display: -moz-box;
+}
+#preview video {
+  min-height: 100%;
 }
 /*
  * Uploader
