--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -1,10 +1,8 @@
-html {
+html, body{
   width: 100%;
   height: 100%;
 }
 body {
-  width: 100%;
-	height: 100%;
 	margin: 0px;
 	background-color: #e2e3e4;
 	color: black;
@@ -12,16 +10,23 @@ body {
   display: -webkit-box;
   -moz-box-orient: vertical;
   -webkit-box-orient: vertical;
-  -moz-box-align: center;
-  -webkit-box-align: center;
 }
-body section, body header {
-  max-width: 1024px;
-}
-
 /*
  *header
  */
+header {
+  color: white;
+  background-color: black;
+  background: -o-linear-gradient(top, #5A5A5A, #010101);  
+  background: -webkit-linear-gradient(top, #5A5A5A, #010101);  
+  background: -moz-linear-gradient(top, #5A5A5A, #010101); 
+	height: 40px;
+  display: -moz-box;
+  display: -webkit-box;
+}
+#title {
+    cursor: pointer;
+}
 #upload-button, #account-menu, #nav-button {
   visibility: hidden;
 }
@@ -45,19 +50,6 @@ header > .right {
   -moz-box-pack: end;
   -webkit-box-pack: end;
 }
-header {
-  display: -moz-box;
-  display: -webkit-box;
-  -moz-box-orient: horizontal;
-  -webkit-box-orient: horizontal;
-  width: 100%;
-  color: white;
-  background-color: black;
-  background: -webkit-linear-gradient(top, #5A5A5A, #010101);  
-  background: -moz-linear-gradient(top, #5A5A5A, #010101); 
-	height: 40px;
-}
-
 
 /*
  * Dock
@@ -71,18 +63,17 @@ header {
 #trash.dragenter {
   font-weight: bold;
 }
+
 /*
  *section
  */
 section {
   background-color: white;
-  border: solid #AAABAD 1px;
   overflow: auto;
-  display: -moz-box;
-  display: -webkit-box;
-  -moz-box-flex: 1;
   -webkit-box-flex: 1;
+  -moz-box-flex: 1;
 }
+
 /*
  * viewer
  */
@@ -140,6 +131,7 @@ section {
 #upload-button {
   vertical-align: middle;
   background: -moz-linear-gradient(top, #65b98b, #24794b);
+  background: -o-linear-gradient(top, #65b98b, #24794b);
   background: -webkit-linear-gradient(top, #65b98b, #24794b);
   color: white;
   -webkit-border-radius: 6px;
@@ -202,161 +194,3 @@ a {
 	color: inherit;
 	text-decoration: none;
 }
-/*
-@media all and (orientation: portrait) {
-  #deck, header, section, body{
-    width: 100% !important;
-  }
-}
-*/
-
-/*
-  Thumbnails shaking
-*/
-@keyframes spaceboots {
-	0% { -transform: translate(2px, 1px) rotate(0deg); }
-	10% { -transform: translate(-1px, -2px) rotate(-1deg); }
-	20% { -transform: translate(-3px, 0px) rotate(1deg); }
-	30% { -transform: translate(0px, 2px) rotate(0deg); }
-	40% { -transform: translate(1px, -1px) rotate(1deg); }
-	50% { -transform: translate(-1px, 2px) rotate(-1deg); }
-	60% { -transform: translate(-3px, 1px) rotate(0deg); }
-	70% { -transform: translate(2px, 1px) rotate(-1deg); }
-	80% { -transform: translate(-1px, -1px) rotate(1deg); }
-	90% { -transform: translate(2px, 2px) rotate(0deg); }
-	100% { -transform: translate(1px, -2px) rotate(-1deg); }
-}
-@keyframes spaceboots2 {
-	0% { -webkit-transform: translate(1px, 2px) rotate(0deg); }
-	10% { -webkit-transform: translate(-2px, -1px) rotate(-1deg); }
-	20% { -webkit-transform: translate(0px, -3px) rotate(1deg); }
-	30% { -webkit-transform: translate(2px, 0px) rotate(0deg); }
-	40% { -webkit-transform: translate(-1px, 1px) rotate(1deg); }
-	50% { -webkit-transform: translate(2px, -1px) rotate(-1deg); }
-	60% { -webkit-transform: translate(1px, -3px) rotate(0deg); }
-	70% { -webkit-transform: translate(1px, 2px) rotate(-1deg); }
-	80% { -webkit-transform: translate(-1px, -1px) rotate(1deg); }
-	90% { -webkit-transform: translate(2px, 2px) rotate(0deg); }
-	100% { -webkit-transform: translate(-2px, 1px) rotate(-1deg); }
-}
-@-webkit-keyframes spaceboots {
-	0% { -webkit-transform: translate(2px, 1px) rotate(0deg); }
-	10% { -webkit-transform: translate(-1px, -2px) rotate(-1deg); }
-	20% { -webkit-transform: translate(-3px, 0px) rotate(1deg); }
-	30% { -webkit-transform: translate(0px, 2px) rotate(0deg); }
-	40% { -webkit-transform: translate(1px, -1px) rotate(1deg); }
-	50% { -webkit-transform: translate(-1px, 2px) rotate(-1deg); }
-	60% { -webkit-transform: translate(-3px, 1px) rotate(0deg); }
-	70% { -webkit-transform: translate(2px, 1px) rotate(-1deg); }
-	80% { -webkit-transform: translate(-1px, -1px) rotate(1deg); }
-	90% { -webkit-transform: translate(2px, 2px) rotate(0deg); }
-	100% { -webkit-transform: translate(1px, -2px) rotate(-1deg); }
-}
-@-webkit-keyframes spaceboots2 {
-	0% { -webkit-transform: translate(1px, 2px) rotate(0deg); }
-	10% { -webkit-transform: translate(-2px, -1px) rotate(-1deg); }
-	20% { -webkit-transform: translate(0px, -3px) rotate(1deg); }
-	30% { -webkit-transform: translate(2px, 0px) rotate(0deg); }
-	40% { -webkit-transform: translate(-1px, 1px) rotate(1deg); }
-	50% { -webkit-transform: translate(2px, -1px) rotate(-1deg); }
-	60% { -webkit-transform: translate(1px, -3px) rotate(0deg); }
-	70% { -webkit-transform: translate(1px, 2px) rotate(-1deg); }
-	80% { -webkit-transform: translate(-1px, -1px) rotate(1deg); }
-	90% { -webkit-transform: translate(2px, 2px) rotate(0deg); }
-	100% { -webkit-transform: translate(-2px, 1px) rotate(-1deg); }
-}
-@-moz-keyframes spaceboots {
-	0% { -moz-transform: translate(2px, 1px) rotate(0deg); }
-	10% { -moz-transform: translate(-1px, -2px) rotate(-1deg); }
-	20% { -moz-transform: translate(-3px, 0px) rotate(1deg); }
-	30% { -moz-transform: translate(0px, 2px) rotate(0deg); }
-	40% { -moz-transform: translate(1px, -1px) rotate(1deg); }
-	50% { -moz-transform: translate(-1px, 2px) rotate(-1deg); }
-	60% { -moz-transform: translate(-3px, 1px) rotate(0deg); }
-	70% { -moz-transform: translate(2px, 1px) rotate(-1deg); }
-	80% { -moz-transform: translate(-1px, -1px) rotate(1deg); }
-	90% { -moz-transform: translate(2px, 2px) rotate(0deg); }
-	100% { -moz-transform: translate(1px, -2px) rotate(-1deg); }
-}
-@-moz-keyframes spaceboots2 {
-	0% { -webkit-transform: translate(1px, 2px) rotate(0deg); }
-	10% { -webkit-transform: translate(-2px, -1px) rotate(-1deg); }
-	20% { -webkit-transform: translate(0px, -3px) rotate(1deg); }
-	30% { -webkit-transform: translate(2px, 0px) rotate(0deg); }
-	40% { -webkit-transform: translate(-1px, 1px) rotate(1deg); }
-	50% { -webkit-transform: translate(2px, -1px) rotate(-1deg); }
-	60% { -webkit-transform: translate(1px, -3px) rotate(0deg); }
-	70% { -webkit-transform: translate(1px, 2px) rotate(-1deg); }
-	80% { -webkit-transform: translate(-1px, -1px) rotate(1deg); }
-	90% { -webkit-transform: translate(2px, 2px) rotate(0deg); }
-	100% { -webkit-transform: translate(-2px, 1px) rotate(-1deg); }
-}
-@-ms-keyframes spaceboots {
-	0% { -ms-transform: translate(2px, 1px) rotate(0deg); }
-	10% { -ms-transform: translate(-1px, -2px) rotate(-1deg); }
-	20% { -ms-transform: translate(-3px, 0px) rotate(1deg); }
-	30% { -ms-transform: translate(0px, 2px) rotate(0deg); }
-	40% { -ms-transform: translate(1px, -1px) rotate(1deg); }
-	50% { -ms-transform: translate(-1px, 2px) rotate(-1deg); }
-	60% { -ms-transform: translate(-3px, 1px) rotate(0deg); }
-	70% { -ms-transform: translate(2px, 1px) rotate(-1deg); }
-	80% { -ms-transform: translate(-1px, -1px) rotate(1deg); }
-	90% { -ms-transform: translate(2px, 2px) rotate(0deg); }
-	100% { -ms-transform: translate(1px, -2px) rotate(-1deg); }
-}
-@-ms-keyframes spaceboots2 {
-	0% { -webkit-transform: translate(1px, 2px) rotate(0deg); }
-	10% { -webkit-transform: translate(-2px, -1px) rotate(-1deg); }
-	20% { -webkit-transform: translate(0px, -3px) rotate(1deg); }
-	30% { -webkit-transform: translate(2px, 0px) rotate(0deg); }
-	40% { -webkit-transform: translate(-1px, 1px) rotate(1deg); }
-	50% { -webkit-transform: translate(2px, -1px) rotate(-1deg); }
-	60% { -webkit-transform: translate(1px, -3px) rotate(0deg); }
-	70% { -webkit-transform: translate(1px, 2px) rotate(-1deg); }
-	80% { -webkit-transform: translate(-1px, -1px) rotate(1deg); }
-	90% { -webkit-transform: translate(2px, 2px) rotate(0deg); }
-	100% { -webkit-transform: translate(-2px, 1px) rotate(-1deg); }
-}
-.thumbnail.edit {
-/*
-.thumbnail:hover,
-*/
-/*
-.thumbnail:focus {
-*/
-	-animation-name: spaceboots;
-	-ms-animation-name: spaceboots;
-	-moz-animation-name: spaceboots;
-	-webkit-animation-name: spaceboots;
-	
-  -animation-duration: 0.8s;
-  -ms-animation-duration: 0.8s;
-  -moz-animation-duration: 0.8s;
-  -webkit-animation-duration: 0.8s;
-  
-	-transform-origin:50% 50%;
-	-ms-transform-origin:50% 50%;
-	-moz-transform-origin:50% 50%;
-	-webkit-transform-origin:50% 50%;
-  
-	-animation-iteration-count: infinite;
-	-ms-animation-iteration-count: infinite;
-	-moz-animation-iteration-count: infinite;
-	-webkit-animation-iteration-count: infinite;
-	
-  -animation-timing-function: linear;
-  -ms-animation-timing-function: linear;
-  -moz-animation-timing-function: linear;
-  -webkit-animation-timing-function: linear;
-}
-menu {
-  display: none;
-}
-/*
-.thumbnail.edit:nth-of-type(2n+1) {
-	-animation-name: spaceboots2;
-	-ms-animation-name: spaceboots2;
-	-moz-animation-name: spaceboots2;
-	-webkit-animation-name: spaceboots2 !important;
-}
-*/
