--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -152,7 +152,7 @@ code {
   height: 0;
   width: 0;
 }
-#upload-button, #folder-adder {
+#upload-button, #folder-adder, #empty-trash   {
   vertical-align: middle;
   background: -moz-linear-gradient(top, #65b98b, #24794b);
   background: -o-linear-gradient(top, #65b98b, #24794b);
