--- a/widgets/thumbnail/thumbnail.css
+++ b/widgets/thumbnail/thumbnail.css
@@ -7,11 +7,15 @@
   margin-top: 16px;
   margin-bottom: 16px;
 }
+/*
 .thumbnail .miniature * {
-  max-width: 100%;
-  max-height: 100%;
+
 }
+*/
+
 .thumbnail .miniature {
+  max-width: 84px;
+  max-height: 84px;
 }
 
 .thumbnail a {
