fix several bugs

--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -199,7 +199,9 @@ code {
   background: none;
   font-size: inherit;
 }
-
+.thumbnail, #folder-adder, #upload-button, #empty-trash {
+  cursor: pointer !important;
+} 
 /*
  * Folders
  */
