on loaded, handle the path

--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -105,7 +105,9 @@ header .left {
   background-color: white;
   padding-top: 40px;
   width: 100%;
+/*
   height: 100%;
+*/
 }
 section#account {
   text-align: center;
