--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -22,6 +22,57 @@ header button {
   cursor: pointer;
 }
 /*
+ *buttons
+ */
+.button {
+  border-width: 0;
+  cursor: pointer;
+  border: none;
+  display: inline-block;
+  padding: 0;
+  text-decoration: inherit;
+  text-shadow: inherit;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: normal;
+  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.5);
+  -webkit-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.5);
+}
+.button:active {
+  box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.5);
+  -moz-box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.5);
+  -webkit-box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.5);
+}
+.button.green {
+  color: inherit;
+  padding: 8px 20px;
+  background: #e8e8e8;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  background: #c0d59f;
+  background: -moz-linear-gradient(top, #c0d59f 51%, #aec985 51%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(51%,#c0d59f), color-stop(51%,#aec985));
+  background: -webkit-linear-gradient(top, #c0d59f 51%,#aec985 51%);
+  background: -o-linear-gradient(top, #c0d59f 51%,#aec985 51%);
+  background: -ms-linear-gradient(top, #c0d59f 51%,#aec985 51%);
+  background: linear-gradient(top, #c0d59f 51%,#aec985 51%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c0d59f', endColorstr='#aec985',GradientType=0 );
+}
+.button.green:hover {
+  background: #c0d59f;
+  background: -moz-linear-gradient(top, #b8cc98 51%, #a6bf7f 51%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(51%,#b8cc98), color-stop(51%,#a6bf7f));
+  background: -webkit-linear-gradient(top, #b8cc98 51%,#a6bf7f 51%);
+  background: -o-linear-gradient(top, #b8cc98 51%,#a6bf7f 51%);
+  background: -ms-linear-gradient(top, #b8cc98 51%,#a6bf7f 51%);
+  background: linear-gradient(top, #b8cc98 51%,#a6bf7f 51%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b8cc98', endColorstr='#a6bf7f',GradientType=0 );
+}
+/*
  *header
  */
 header {
@@ -35,8 +86,12 @@ header {
 */
   margin: auto;
   max-width: 1024px;
-	height: 40px;
+  height: 40px;
   line-height: 40px;
+  position:relative;
+  -webkit-box-shadow: 0 10px 6px -6px #777;
+  -moz-box-shadow: 0 10px 6px -6px #777;
+  box-shadow: 0 10px 6px -6px #777;
 }
 /*
 #title {
@@ -151,8 +206,6 @@ header > .left > *{
   height: calc(100% - 46px);
   height: -webkit-calc(100% - 46px);
   height: -moz-calc(100% - 46px);
-  
-  box-shadow: inset 0 0 15px gray;
 }
 #deck > * {
   position: absolute;
