--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -27,9 +27,6 @@ body {
   font: inherit;
   text-shadow: inherit;
   line-height: normal;
-  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.5);
-  -moz-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.5);
-  -webkit-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.5);
 }
 .button:active {
   box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.5);
@@ -187,27 +184,23 @@ header > .left > *{
  */
 #deck {
   margin: auto;
-  width: 1022px;
-  border-bottom: solid 1px gray;
-  border-left: solid 1px gray;
-  border-right: solid 1px gray;
+  max-width: 1022px;
+
   background-color: white;
   overflow: hidden;
-/*
-  max-height: calc(100% - 40px);
-  max-height: -webkit-calc(100% - 40px);
-  max-height: -moz-calc(100% - 40px);
-*/
   height: calc(100% - 46px);
-  height: -webkit-calc(100% - 46px);
+  height: -webkit-calc(100% - 40px);
   height: -moz-calc(100% - 46px);
 }
 #deck > * {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  max-width: 1022px;
   margin: 0;
   padding: 0;
+  height: calc(100% - 46px);
+  height: -webkit-calc(100% - 40px);
+  height: -moz-calc(100% - 46px);
+  overflow: hidden;
 }
 section#account {
   text-align: center;
