--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -64,6 +64,12 @@ body {
  *header
  */
 header {
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  z-index: 1;
   font-weight: bold;
   color: white;
   background-color: grey;
