--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -60,15 +60,92 @@ body {
   background: linear-gradient(top, #b8cc98 51%,#a6bf7f 51%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b8cc98', endColorstr='#a6bf7f',GradientType=0 );
 }
+#newFolder.fadeIn {
+  transition: opacity 0.5s linear;
+  -moz-transition: opacity 0.5s linear;
+  -webkit-transition: opacity 0.5s linear;
+
+  animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  -webkit-animation-duration: 1s;
+
+  animation-name: fadein;
+  -moz-animation-name: fadein;
+  -webkit-animation-name: fadein;
+}
+#newFolder.fadeOut {
+  transition: opacity 0.5s linear;
+  -webkit-transition: opacity 0.5s linear;
+  -ms-transition: opacity 0.5s linear;
+  -moz-transition: opacity 0.5s linear;
+  -o-transition: opacity 0.5s linear;
+
+  animation-duration: 0.5s;
+  -moz-animation-duration: 0.5s;
+  -webkit-animation-duration: 0.5s;
+
+  animation-name: fadeout; 
+  -moz-animation-name: fadeout; 
+  -webkit-animation-name: fadeout; 
+}
+@-webkit-keyframes fadein {  
+  from {
+    opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
+} 
+@-moz-keyframes fadein {  
+  from {
+    opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
+} 
+@keyframes fadein {  
+  from {
+    opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
+} 
+@-webkit-keyframes fadeout {  
+  from {
+    opacity: 1;
+  }
+  to {
+      opacity: 0;
+  }
+} 
+@-moz-keyframes fadeout {  
+  from {
+    opacity: 1;
+  }
+  to {
+      opacity: 0;
+  }
+} 
+@keyframes fadeout {  
+  from {
+    opacity: 1;
+  }
+  to {
+      opacity: 0;
+  }
+}
 /*
  *header
  */
 header {
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -o-border-radius: 4px;
-  border-radius: 4px;
+  -webkit-border-bottom-right-radius: 4px;
+  -webkit-border-bottom-left-radius: 4px;
+  -moz-border-radius-bottomright: 4px;
+  -moz-border-radius-bottomleft: 4px;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px
   z-index: 1;
   font-weight: bold;
   color: white;
