--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -150,11 +150,6 @@ header {
   font-weight: bold;
   color: white;
   background-color: grey;
-/*
-  background: -o-linear-gradient(top, #5A5A5A, #010101);  
-  background: -webkit-linear-gradient(top, #5A5A5A, #010101);  
-  background: -moz-linear-gradient(top, #5A5A5A, #010101); 
-*/
   margin: auto;
   max-width: 1024px;
   height: 40px;
@@ -164,16 +159,6 @@ header {
   -moz-box-shadow: 0 10px 6px -6px #777;
   box-shadow: 0 10px 6px -6px #777;
 }
-/*
-#title {
-    cursor: pointer;
-}
-*/
-/*
-#upload-button, #folder-adder, #account-menu, #nav-button {
-  display: none;
-}
-*/
 header > * {
   width: calc(100%/3);
   width: -webkit-calc(100%/3);
@@ -186,14 +171,6 @@ header .button {
   margin-top: 5px;
   padding: 5px;
 }
-header .middle * {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 100%;
-  max-height: 100%;
-  text-align: center;
-}
 header .left {
   text-align: left;
 }
@@ -201,8 +178,16 @@ header > .left > *{
   position: absolute;
 }
 header > .middle > *{
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   text-align: center;
-  position: absolute;
+  text-align: center;
+  position: fixed;
+  cursor: default;
+  left: 50%;
+  width: 400px;
+  margin-left: -200px;
 }
 header > .right > *{
   position: absolute;
