--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -21,6 +21,7 @@ body {
   border: none;
   display: inline-block;
   padding: 8px 20px;
+  border-radius: 4px;
 /*
   margin: 0;
 */
@@ -36,11 +37,6 @@ body {
 .button.green {
   color: inherit;
   background: #e8e8e8;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -o-border-radius: 4px;
-  border-radius: 4px;
   background: #c0d59f;
   background: -moz-linear-gradient(top, #c0d59f 51%, #aec985 51%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(51%,#c0d59f), color-stop(51%,#aec985));
@@ -140,12 +136,7 @@ body {
  *header
  */
 header {
-  -webkit-border-bottom-right-radius: 4px;
-  -webkit-border-bottom-left-radius: 4px;
-  -moz-border-radius-bottomright: 4px;
-  -moz-border-radius-bottomleft: 4px;
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px
+  border-radius: 0 0 4px 4px;
   z-index: 1;
   font-weight: bold;
   color: white;
