--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -40,44 +40,39 @@ body {
   height: 50%;
   width: 100%;
 }
-#account div button {
+#account div button, input[type="submit"] {
   display: inline;
 }
 label {
   cursor: pointer;
-  float: left;
-  width: 150px;
-  margin-right: 40px;
-  text-align: right;
+  display: block;
+  text-align: left;
   font-size: inherit;
-  padding-top: 9px;
+  margin: 0 auto;
+  padding-bottom: 10px;
 }
 form p {
-  overflow: hidden;
-  padding: 10px 0;
+  width: 70%;
+  margin: 10px auto;
+  padding: 0;
+  display: block;
+  text-align: right;
 }
-input::-moz-selection {
+input::-moz-selection, input::selection {
   background: grey;
   color: #fff;
-}
-input::selection {
-  background: grey;
-  color: #fff;
-}
-input[type="submit"] {
-  margin-left: 240px;
 }
 input[type="text"], input[type="password"], input[type="email"] {
   border: 1px solid #aaa;
-  padding: 10px;
+  padding: 3%;
   background-image: -moz-linear-gradient(bottom, rgb(255,255,255) 20%, rgb(240,240,240) 80%);
   background-image: -webkit-linear-gradient(bottom, rgb(255,255,255) 20%, rgb(240,240,240) 80%);
   background-image: -o-linear-gradient(bottom, rgb(255,255,255) 20%, rgb(240,240,240) 80%);
   background-image: -ms-linear-gradient(bottom, rgb(255,255,255) 20%, rgb(240,240,240) 80%);
   background-image: linear-gradient(bottom, rgb(255,255,255) 20%, rgb(240,240,240) 80%);
-  width: 290px;
   line-height: 1em;
   margin: 0;
+  width: 94%;
   font-size: inherit;
   color: #888;
   -moz-transition: all .3s linear 0s;
@@ -95,11 +90,7 @@ input[type="text"]:focus, input[type="password"]:focus , input[type="email"]:foc
   background-image: -ms-linear-gradient(bottom, rgb(255,255,255) 20%, rgb(240,240,240) 80%);
   background-image: linear-gradient(bottom, rgb(255,255,255) 20%, rgb(240,240,240) 80%);
 }
-input::-webkit-input-placeholder {
-  color: #aaa;
-  font-style: italic;
-}
-input:-moz-placeholder {
+input::-webkit-input-placeholder, input:-moz-placeholder {
   color: #aaa;
   font-style: italic;
 }
@@ -127,7 +118,7 @@ input:-moz-placeholder {
   -webkit-box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.5);
 }
 .button.green {
-  color: inherit;
+  color: #fff;
   background: #c0d59f;
   background: -moz-linear-gradient(top, #c0d59f 51%, #aec985 51%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(51%,#c0d59f), color-stop(51%,#aec985));
@@ -148,7 +139,7 @@ input:-moz-placeholder {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b8cc98', endColorstr='#a6bf7f',GradientType=0 );
 }
 .button.grey {
-  color: inherit;
+  color: #fff;
   background: #d5d5d5;
   background: -moz-linear-gradient(top, #d5d5d5 51%, #c9c9c9 51%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(51%,#d5d5d5), color-stop(51%,#c9c9c9));
